2007-02-09  Markus Schiltknecht  <markus@bluegap.ch>

	* tests/test_a_merge_8/{parent,left,right,correct}: simplified
	the test case.
	
2007-02-08  Derek Scherger  <derek@echologic.com>

	* cmd_merging.cc (get_content_paths): new function
	(update):
	(pluck): put paths by content hash into workspace adapter
	* diff_patch.{cc,hh} (content_merge_adaptor::get_version): remove
	path argument from interface
	(content_merge_workspace_adaptor): add map of paths by content
	hash to workspace adaptor
	(content_merge_workspace_adaptor::get_version): get path from map
	* work.cc (attr_file_name): remove unused var
	(editable_working_tree::written_content): remove
	(content_merge_empty_adaptor::get_version): remove path argument
	(editable_working_tree::create_file_node): write file content here
	rather than deferring it to attach_node
	(editable_working_tree::attach_node): remove deferred file content
	(editable_working_tree::apply_delta): remove path argument from 
	get_version call

2007-02-08  Zack Weinberg  <zackw@panix.com>

	* configure.ac: Stick some goo in config.status to kill
	UPDATEPOFILES in po/Makefile, so that .po files will not be
	automatically regenerated.

2007-02-07  Lapo Luchini  <lapo@lapo.it>

	* vocab_macros.hh: added operator!=() to 'enc' and 'dec'.

2007-02-07  Derek Scherger  <derek@echologic.com>

	* commands.cc:
	* roster.cc:
	replace references to localized_file_io.hh with file_io.hh

2007-02-07  Derek Scherger  <derek@echologic.com>

	* NEWS: add note about the removal of the charset and line
	separator hooks

2007-02-07  Daniel Carosone  <dan@geek.com.au>

	* rename tests {update,checkout}_clobbers_workspace to
	_does_not_clobber_workspace, because they now no longer do.
	* add a corollary pluck_does_not_clobber_workspace

2007-02-07  Nathaniel Smith  <njs@pobox.com>

	* tests/ls_unknown_in_subdir: Update test to match new
	non-recursiveness of ls unknown.

2007-02-07  Derek Scherger  <derek@echologic.com>
